--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.todos-list {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+}
+
+.todo-item {
+    cursor: pointer;
+    margin: 0.5em 0;
+}
+
+.done {
+    text-decoration: line-through;
+}
+
+.tag {
+    color: red;
+    margin-left: 1em;
+}
+
+.todo-item__container {
+    display: flex;
+    align-items: center;
 }
